--- a/resources/dynamic/single.html
+++ b/resources/dynamic/single.html
@@ -28,8 +28,9 @@ If useList Then
           {%
             Dim cr = CurrentQuestion.Responses[i].Children
             For j = 1 To cr.Count
+            attrSelected = On(cr[j].IsSelected, "selected=\"selected\"", "")
           %}
-          <option value="{%= inputValue %}" {%:= attrSelected %}>{%= cr[j].Caption %}</option>
+          <option value="{%= cr[j].InputValue() %}" {%:= attrSelected %}>{%= cr[j].Caption %}</option>
           {% Next j %}
         </optgroup>
         {% ElseIf CurrentQuestion.Responses[i].Parent.isHeader <> True Then %}
@@ -65,7 +66,7 @@ If useList Then
                     {% EndIf %}{%:= caption %}</label>
             </li>
             {% EndIF %}
-            {% EndIF %}          
+            {% EndIF %}
         {% Next %}
     </ul>
 {% EndIf %}
