--- a/resources/dynamic/multiple.html
+++ b/resources/dynamic/multiple.html
@@ -9,6 +9,22 @@ Dim j
 Dim isHeader
 Dim showHeader    = CurrentADC.PropValue("showHeaders") ="1"
 
+Dim ar = CurrentQuestion.Responses
+Dim	otherIDarray As NumberArray
+Dim arrOpenValues As StringArray
+Dim arrOpenNames As StringArray
+Dim otherID
+Dim k
+Dim index
+
+For i = 1 to ar.Count
+    If ar[i].isOpen = True Then
+        arrOpenValues.Push(ar[i].OpenQuestion.InputValue())
+        arrOpenNames.Push(ar[i].OpenQuestion.InputName())
+        otherIDarray.Push(ar[i].Index)
+    Endif
+Next i
+
 If useList Then
     inputName = CurrentQuestion.InputName("list") %}
     <select name="{%= inputName %}" multiple="multiple" class="multiSelect">
@@ -52,6 +68,7 @@ If useList Then
     		    exclusive = On(CurrentQuestion.Responses[i].IsExclusive, "class=\"askia-exclusive\"", "")
             caption     = CurrentQuestion.Responses[i].Caption
     		    resource	= CurrentQuestion.Responses.ResourceURL[i]
+            index		= CurrentQuestion.Responses[i].index
 
             isHeader     = CurrentQuestion.Responses[i].isHeader
             If isHeader = False or showHeader = True Then
@@ -67,6 +84,15 @@ If useList Then
                     <img src="{%= resource %}" style="vertical-align:middle" alt="{%:= caption %}" />
                     {% EndIf %}{%:= caption %}
                 </label>
+
+                {% For k = 1 To otherIDarray.Count
+                	otherID = otherIDarray[k].ToNumber()
+                	IF index = otherID Then %}
+                        <div style="overflow:hidden"><input type="text" aria-label="Other" class="otherText"  id="{%= CurrentQuestion.Responses[i].OpenQuestion.InputName() %}"
+                          name="{%= CurrentQuestion.Responses[i].OpenQuestion.InputName() %}" data-id="{%= k %}" value="{%= CurrentQuestion.Responses[i].OpenQuestion.inputValue() %}"></div>
+                        <!-- <div style="clear:both"></div> -->
+                  {% EndIF %}
+                {% Next %}
             </li>
             {% EndIf %}
             {% EndIf %}
