--- a/resources/dynamic/single.html
+++ b/resources/dynamic/single.html
@@ -1,7 +1,7 @@
 {%
 Dim useList   = (CurrentADC.PropValue("useList") = "1") ' Convert to boolean
 Dim inputName = CurrentQuestion.InputName()
-Dim ar = CurrentQuestion.Responses
+Dim ar = CurrentQuestion.AvailableResponses
 Dim inputValue
 Dim caption
 Dim resource
@@ -31,25 +31,25 @@ If useList Then
 <select name="{%= inputName %}" aria-label="Select">
         <option value="" disabled="disabled"{%:= attrSelected %}>{%:= CurrentADC.PropValue("firstOptionText") %}</option>
     {%
-    For i = 1 To CurrentQuestion.Responses.Count
-        attrSelected = On(CurrentQuestion.Responses[i].IsSelected, "selected=\"selected\"", "")
-        inputValue   = CurrentQuestion.Responses[i].InputValue()
-        caption      = CurrentQuestion.Responses[i].Caption
-        isHeader     = CurrentQuestion.Responses[i].isHeader
+    For i = 1 To CurrentQuestion.AvailableResponses.Count
+        attrSelected = On(CurrentQuestion.AvailableResponses[i].IsSelected, "selected=\"selected\"", "")
+        inputValue   = CurrentQuestion.AvailableResponses[i].InputValue()
+        caption      = CurrentQuestion.AvailableResponses[i].Caption
+        isHeader     = CurrentQuestion.AvailableResponses[i].isHeader
 
         If isHeader = False or showHeader = True Then
         IF isHeader = True Then
         %}
         <optgroup label="{%= caption %}">
           {%
-            Dim cr = CurrentQuestion.Responses[i].Children
+            Dim cr = CurrentQuestion.AvailableResponses[i].Children
             For j = 1 To cr.Count
             attrSelected = On(cr[j].IsSelected, "selected=\"selected\"", "")
           %}
           <option value="{%= cr[j].InputValue() %}" {%:= attrSelected %}>{%= cr[j].Caption %}</option>
           {% Next j %}
         </optgroup>
-        {% ElseIf CurrentQuestion.Responses[i].Parent.isHeader <> True Then %}
+        {% ElseIf CurrentQuestion.AvailableResponses[i].Parent.isHeader <> True Then %}
         <option value="{%= inputValue %}" {%:= attrSelected %}>{%= caption %}</option>
         {% EndIF %}
         {% EndIF %}
@@ -60,15 +60,15 @@ If useList Then
         {%
         Dim inputId
         Dim attrChecked
-        For i = 1 To CurrentQuestion.Responses.Count
+        For i = 1 To CurrentQuestion.AvailableResponses.Count
             inputId     = (inputName + "_" + i).Replace("U", "askia-input")
-            attrChecked = On(CurrentQuestion.Responses[i].IsSelected, "checked=\"checked\"", "")
-            inputValue  = CurrentQuestion.Responses[i].InputValue()
-            caption     = CurrentQuestion.Responses[i].Caption
-			      resource	= CurrentQuestion.Responses.ResourceURL[i]
-            index		= CurrentQuestion.Responses[i].index
+            attrChecked = On(CurrentQuestion.AvailableResponses[i].IsSelected, "checked=\"checked\"", "")
+            inputValue  = CurrentQuestion.AvailableResponses[i].InputValue()
+            caption     = CurrentQuestion.AvailableResponses[i].Caption
+			      resource	= CurrentQuestion.AvailableResponses.ResourceURL[i]
+            index		= CurrentQuestion.AvailableResponses[i].index
 
-            isHeader     = CurrentQuestion.Responses[i].isHeader
+            isHeader     = CurrentQuestion.AvailableResponses[i].isHeader
             If isHeader = False or showHeader = True Then
             IF isHeader = True Then
             %}
@@ -87,8 +87,8 @@ If useList Then
                 {% For k = 1 To otherIDarray.Count
                 	otherID = otherIDarray[k].ToNumber()
                 	IF index = otherID Then %}
-                        <div style="overflow:hidden"><input type="text" aria-label="Other" class="otherText"  id="{%= CurrentQuestion.Responses[i].OpenQuestion.InputName() %}"
-                          name="{%= CurrentQuestion.Responses[i].OpenQuestion.InputName() %}" data-id="{%= k %}" value="{%= CurrentQuestion.Responses[i].OpenQuestion.inputValue() %}"></div>
+                        <div style="overflow:hidden"><input type="text" aria-label="Other" class="otherText"  id="{%= CurrentQuestion.AvailableResponses[i].OpenQuestion.InputName() %}"
+                          name="{%= CurrentQuestion.AvailableResponses[i].OpenQuestion.InputName() %}" data-id="{%= k %}" value="{%= CurrentQuestion.AvailableResponses[i].OpenQuestion.inputValue() %}"></div>
                         <!-- <div style="clear:both"></div> -->
                   {% EndIF %}
                 {% Next %}
