--- a/resources/dynamic/single.html
+++ b/resources/dynamic/single.html
@@ -10,6 +10,8 @@ Dim j
 Dim attrSelected
 Dim isHeader
 Dim showHeader    = CurrentADC.PropValue("showHeaders") ="1"
+Dim expandableHeaders = CurrentADC.PropValue("expandableHeaders") ="1"
+Dim accordionInitialState = CurrentADC.PropValue("accordionInitialState")
 
 Dim	otherIDarray As NumberArray
 Dim arrOpenValues As StringArray
@@ -72,27 +74,42 @@ If useList Then
             If isHeader = False or showHeader = True Then
             IF isHeader = True Then
             %}
-            <li class="responseHeader" onmousedown="return false;">{%:= caption %}</li>
+            <li class="responseHeader" data-id="{%= index %}">
+              {%
+              If expandableHeaders = True Then
+                  If accordionInitialState = "expanded" Then %}
+                  <span class="minus"></span>
+                  {% Else %}
+                  <span class="plus"></span>
+                  {% EndIf %}
+              {% EndIf %}
+              {%:= caption %}</li>
+
             {% Else %}
-            <li class="askia-response">
+
+              {% If CurrentQuestion.AvailableResponses[i].Parent.isHeader = true Then %}
+              <li class="askia-response headerchild{%= CurrentQuestion.AvailableResponses[i].Parent.index %}" style="margin-left: 1em">
+              {% Else %}
+              <li class="askia-response">
+              {% EndIf %}
                 <input type="radio" name="{%= inputName %}" id="{%= inputId %}" value="{%= inputValue %}" {%:= attrChecked %} />
                 <label for="{%= inputId %}" class="askia-radio"><span hidden>Radio</span></label>
                 <label for="{%= inputId %}" class="askia-response-label">
-                {% IF (resource <> "") Then %}
-                  <img src="{%= resource %}" style="vertical-align:middle" alt="{%:= caption %}"/>
-                {% EndIf %}{%:= caption %}
+                    {% IF (resource <> "") Then %}
+                      <img src="{%= resource %}" style="vertical-align:middle" alt="{%:= caption %}"/>
+                    {% EndIf %}{%:= caption %}
                 </label>
 
-                <!-- <div style="clear:both"></div> -->
                 {% For k = 1 To otherIDarray.Count
                 	otherID = otherIDarray[k].ToNumber()
                 	IF index = otherID Then %}
-                        <div style="overflow:hidden"><input type="text" aria-label="Other" class="otherText"  id="{%= CurrentQuestion.AvailableResponses[i].OpenQuestion.InputName() %}"
-                          name="{%= CurrentQuestion.AvailableResponses[i].OpenQuestion.InputName() %}" data-id="{%= k %}" value="{%= CurrentQuestion.AvailableResponses[i].OpenQuestion.inputValue() %}"></div>
-                        <!-- <div style="clear:both"></div> -->
+                        <div style="overflow:hidden"><input type="text" aria-label="Other" class="otherText"
+                          id="{%= CurrentQuestion.AvailableResponses[i].OpenQuestion.InputName() %}"
+                          name="{%= CurrentQuestion.AvailableResponses[i].OpenQuestion.InputName() %}"
+                          data-id="{%= k %}" value="{%= CurrentQuestion.AvailableResponses[i].OpenQuestion.inputValue() %}"></div>
                   {% EndIF %}
-                {% Next %}
-            </li>
+                {% Next k %}
+              </li>
             {% EndIF %}
             {% EndIF %}
         {% Next %}
