--- a/resources/dynamic/multiple.html
+++ b/resources/dynamic/multiple.html
@@ -76,21 +76,21 @@ If useList Then
             If isHeader = False or showHeader = True Then
             IF isHeader = True Then
             %}
-            <li class="responseHeader" data-id="{%= index %}">
+            <li class="responseHeader" data-id="{%= CurrentQuestion.id %}_{%= index %}">
               {%
               If expandableHeaders = True Then
-                  If accordionInitialState = "expanded" Then %}
-                  <span class="minus"></span>
-                  {% Else %}
-                  <span class="plus"></span>
-                  {% EndIf %}
+                  'If accordionInitialState = "expanded" Then %}
+                  <!-- <span class="down-point"></span> -->
+                  {% 'Else %}
+                  <span class="right-point"></span>
+                  {% 'EndIf %}
               {% EndIf %}
               {%:= caption %}</li>
 
             {% Else %}
 
               {% If CurrentQuestion.AvailableResponses[i].Parent.isHeader = true Then %}
-              <li class="askia-response headerchild{%= CurrentQuestion.AvailableResponses[i].Parent.index %}" style="margin-left: 1em">
+              <li class="askia-response headerchild{%= CurrentQuestion.id %}_{%= CurrentQuestion.AvailableResponses[i].Parent.index %}" style="margin-left: 1em">
               {% Else %}
               <li class="askia-response">
               {% EndIf %}
@@ -110,7 +110,6 @@ If useList Then
                               data-id="{%= k %}" value="{%= CurrentQuestion.AvailableResponses[i].OpenQuestion.inputValue() %}"></div>
                       {% EndIF %}
                     {% Next %}
-                    
                 </label>
             </li>
             {% EndIf %}
